service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkpoint-service
  namespace: default
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
